@@ -53,6 +53,7 @@ FA_CHANNEL_MAP_IDS    = "<discord-id>"
 FA_CHANNEL_MUSIC_LIST = "<discord-id>"
 
 FA_CHANNEL_TICKET_LOGS  = "<discord-id>"
+FA_CHANNEL_LOGS         = "<discord-id>"
 FA_CHANNEL_AUTOMOD_LOGS = "<discord-id>"
 
 
